<resources>
    <string name="app_name">Fragment</string>
    <string name="action_settings">Settings</string>
    <string name="contact_name">Nombre</string>
    <string name="contact_number">Numero</string>
    <string name="contact_email">Email</string>
    <string name="contact_message">Message</string>
    <string name="contact_send">Send</string>
    <string name="action_contact">Contact</string>
    <string name="contact_cancel">Cancel</string>
    <string name="title_activity_location">Location</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_location">Localizacion</string>
    <string name="action_map">Map</string>
    <string name="action_album">Album</string>
    <string name="title_activity_map">Map</string>
    <string name="bar_title">Finder Tracker</string>
    <string name="bar_subtitle">AT and T ProbusinessApps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
