<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.ingluismontesdeoca.fragment.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="120"
        android:title="@string/action_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_location"
        android:orderInCategory="140"
        android:title="@string/action_location"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_map"
        android:orderInCategory="160"
        android:title="@string/action_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_album"
        android:orderInCategory="160"
        android:title="@string/action_album"
        app:showAsAction="never" />
</menu>
