<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:hint="@string/contact_name"
        android:inputType="textPersonName"
        android:id="@+id/contact_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:hint="@string/contact_number"
        android:inputType="phone"
        android:id="@+id/contact_number"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:hint="@string/contact_email"
        android:inputType="textEmailAddress"
        android:id="@+id/contact_email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:id="@+id/contact_message"
        android:inputType="textMultiLine"
        android:hint="@string/contact_message"/>

    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:hint="@string/contact_send"
            android:onClick="actionSend"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:hint="@string/contact_cancel"
            android:onClick="actionCancel"/>
        </LinearLayout>

</LinearLayout >
